# Basic_shop

./: README.md  data.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogarticle_detail.html  blogarticle_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: blogarticle_data.json  catalog_data.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_category_product_created_at_and_more.py  0003_alter_product_created_at_alter_product_updated_at.py  0004_alter_category_options_alter_product_options.py  0005_alter_category_name_alter_product_description_and_more.py  0005_alter_product_category.py  0005_product_manufactured_at.py  0006_alter_category_description.py  0006_product_views_counter.py  0007_blogarticle.py  0008_merge_20240910_1345.py  0009_alter_blogarticle_options_alter_product_description_and_more.py  0010_merge_20240921_1103.py  0011_alter_blogarticle_options_alter_product_description_and_more.py  0012_product_creator.py  0013_alter_product_options_product_is_active.py
catalog/templates/: home.html  new_product.html  product_detail.html  products.html
catalog/templates/catalog/: blogarticle_confirm_delete.html  home.html  (+9 more)
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_avatar.py  0003_user_token.py  0004_alter_user_country_alter_user_phone.py
users/templates/: login.html
(+4 files in other folders)
