[tool.poetry]
name = "dz-19-2-1"
version = "0.1.0"
description = ""
authors = ["bash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.26.0"
python-slugify = "^8.0.4"
pytils = "^0.4.1"
django = "4.2.2"
redis = "^5.1.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
